# Example-RAG

./: .dockerignore  .env.tmpl  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt
src/evaluation/: ragas.ipynb
src/example_rag/: __init__.py  app.py  settings.py
src/example_rag/chatbot/: messenger.py  model.py  retriever.py
src/example_rag/data/raw_data/: altoriu_seselis.epub
src/example_rag/processing/: embedder.py  indexing.py  parsing.py  translator.py
src/example_rag/utils/: logging.py
